# RayTracing_1

./: CMakeLists.txt  README.md  main.cpp
core/: AABB.cpp  AABB.h  BVH.cpp  BVH.h  Camera.cpp  Camera.h  CommonFunc.cpp  CommonFunc.h  Ray.cpp  Ray.h  Texture.cpp  Texture.h  ThreadHandler.cpp  ThreadHandler.h  tgaimage.h
shapes/: HittableList.cpp  HittableList.h  Material.cpp  Material.h  MovingSphere.cpp  MovingSphere.h  Sphere.cpp  Sphere.h  hittable.cpp  hittable.h
